--- a/sam.html
+++ b/sam.html
@@ -1,18 +1,1 @@
-],
-"foreign_keys": [
-
-],
-"relationships": [
-{
-"name": "user",
-"type": "belongsTo",
-"class": "App\\User"
-}
-],
-"validations": [
-{
-"field": "title",
-"rules": "required|max:10"
-}
-]
-}
+fjrrfjtvjrjjvjjjvjvjvjfjfjjvjfjfj
